package(default_visibility = ["//visibility:public"])

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

rust_binary(
    name = "cimmeria",
    srcs = [
      "src/main.rs",
      "src/api.rs",
      "src/database.rs",
    ],
    deps = [
      "@crates//:axum",
      "@crates//:chrono",
      "@crates//:serde",
      "@crates//:sqlx",
      "@crates//:thiserror",
      "@crates//:tokio",
      "@crates//:tower-http",
      "@crates//:tracing",
      "@crates//:tracing-subscriber",
    ],
)

pkg_tar(
    name = "layer",
    srcs = [":cimmeria"],
)

oci_image(
    name = "image",
    base = "@distroless_cc",
    tars = [":layer"],
    entrypoint = ["/cimmeria"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cimmeria:latest"],
)
