[package]
name = "cimmeria"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
